Collapsed nav fix

--- a/css/style.css
+++ b/css/style.css
@@ -891,15 +891,21 @@ header[role=banner] {
 /* Small menu */
 .menu-toggle {
   cursor: pointer;
-  display: none;
-  color: #189730;
-  font-size: 2.5em; }
+  display: none; }
 
 @media screen and (max-width: 600px) {
   .menu-toggle,
   .main-navigation.toggled .nav-menu {
     display: block;
-    position: relative; }
+    position: relative;
+    float: right; }
+
+  .main-navigation .menu-toggle {
+    font-size: 1.4em;
+    text-transform: uppercase; }
+
+  .main-navigation.toggled .menu-toggle {
+    font-style: italic; }
 
   .main-navigation ul {
     display: none; } }
@@ -976,6 +982,7 @@ article {
   vertical-align: top;
   margin-bottom: 2rem; }
   article .entry-meta {
+    font-size: 0.85em;
     margin-bottom: 0.5rem;
     color: scale-saturation(#09388c, -100%); }
     article .entry-meta a:hover {
@@ -1022,10 +1029,6 @@ article {
     margin-left: 1rem; } }
 .entry-content p a {
   text-decoration: underline; }
-
-.byline {
-  font-size: 0.85em;
-  margin-bottom: 0.5rem; }
 
 /* Wordpress Caption */
 .wp-caption-text {
